[package]
name = "kami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bytemuck = "1.8.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
unicode-segmentation = "1.9.0"
wgpu = "0.12.0"
wgpu_glyph = "0.16.0"
winit = "0.26.1"
